force-app/main/default/objects/Apttus__DocumentVersionProperties__c/Apttus__DocumentVersionProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Document Version Properties</description>
    <label>Document Version Properties</label>
</CustomObject>