force-app/main/default/objects/Apttus__DocumentVersionProperties__c/fields/Apttus__DocumentVersionTrim__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionTrim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will trim the last decimal point and number from the document version in the naming convention. For example version 1.2.0 would become 1.2 in the name of the document.</description>
    <inlineHelpText>Checking this box will trim the last decimal point and number from the document version in the naming convention. For example version 1.2.0 would become 1.2 in the name of the document.</inlineHelpText>
    <label>Trim Document Version Number</label>
    <type>Checkbox</type>
</CustomField>