force-app/main/default/objects/Apttus__DocumentVersionProperties__c/fields/Apttus__IncrementCheckinWithoutRedlines__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IncrementCheckinWithoutRedlines__c</fullName>
    <description>This property will determine the increment factor when a document is checked in without redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</description>
    <inlineHelpText>This property will determine the increment factor when a document is checked in without redlines.  Acceptable values for this field are &quot;Major&quot; or &quot;Minor&quot;.  The default value is Major</inlineHelpText>
    <label>Increment Checkin Without Redlines</label>
    <length>16</length>
    <type>Text</type>
</CustomField>