force-app/main/default/objects/Apttus__DocumentVersionProperties__c/fields/Apttus__InitialVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InitialVersion__c</fullName>
    <description>This property will set the initial version number of a newly generated or uploaded document.  Acceptable values for this field are 1 or 0.  Default value is 1</description>
    <inlineHelpText>This property will set the initial version number of a newly generated or uploaded document.  Acceptable values for this field are 1 or 0.  Default value is 1</inlineHelpText>
    <label>Initial Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>